@@ -63,6 +63,7 @@ rm -rf $RPM_BUILD_ROOT
 * Fri Sep 24 2021 Proton Technologies AG <opensource@proton.me> 3.5.0-1
 - Handle human verification
 - Fix: Remove network interfaces upon reboot/shutdown if kill switch is not set to permanent
+- Fix: Wake on suspend has now an additional check to ensure that the reconnector kicks in only when the session is unlocked
 
 * Tue Jul 06 2021 Proton Technologies AG <opensource@proton.me> 3.4.1-3
 - More often update server maintenance status 
